--- a/multi-db/docker-compose.yml
+++ b/multi-db/docker-compose.yml
@@ -15,3 +15,18 @@ services:
       TZ: Asia/Tokyo
     ports:
       - 3306:3306
+  second-db:
+    image: mysql:8.0
+    restart: always
+    platform: linux/x86_64
+    volumes:
+      - ./db/second/data:/var/lib/mysql
+      - ./db/second/init:/docker-entrypoint-initdb.d
+    environment:
+      MYSQL_DATABASE: secondary_db
+      MYSQL_USER: my_user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+      TZ: Asia/Tokyo
+    ports:
+      - 3307:3306
